<resources>
    <string name="app_name">Spice Shop</string>

    <string name="editor_activity_title_new_spice">Add a Spice</string>

    <string name="editor_activity_title_edit_spice">Edit Spice</string>

    <string name="action_save">Save</string>

    <string name="action_delete">Delete</string>

    <string name="ErrorSavingSpices">Error with saving spice</string>

    <string name="SpicesSaved">Spice saved</string>

    <string name="empty_view_title_text">Spice up your life!</string>

    <string name="empty_view_subtitle_text">Click + button to start adding a spice</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>

    <string name="SpicesDeleted">Spice deleted</string>

    <string name="ErrorDeletingSpices">Error with deleting spice</string>

    <string name="delete_dialog_msg">Delete this spice?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>

    <string name="price">Price</string>

    <string name="quantity">Quantity</string>

    <string name="description">Description</string>

    <string name="spice_name">Spice name</string>

    <string name="supplier">Supplier email</string>

    <string name="NoSpiceSaved">No spice saved - please add correct information</string>

    <string name="outofstock">Spice is out of stock!</string>

    <string name="order_more">Order more</string>

    <string name="minus">-</string>

    <string name="plus">+</string>

    <string name="select_image">Select a product image</string>

    <string name="selectimage">Select image</string>

    <string name="stock">Stock</string>

    <string name="sale">Sale</string>

    <string name="email_subject">Order</string>

    <string name="email_message1">Please send us 100 more of:</string>

    <string name="email_message2">Regards, Spice Shop</string>
</resources>
